[tool.poetry]
name = "pylandroidcloud"
version = "0.1.0"
description = "Worx Landroid Cloud API library"
authors = ["Markus Haack"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = ">=3.4"
requests-oauthlib = "^1.3.0"
typing = { version = "^3.7.4", python = "<3.5" }
ratelimit = "^2.2.1"

[tool.poetry.dev-dependencies]
tox = ">=3.0"
pytest = ">=4.1"
pytest-cov = ">=2.8.1"
httpretty = ">=1.0.2"
pre-commit = ">=1.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
